# MonitorShell

./: CMakeLists.txt
include/: CByteOrder.h  CFileReader.h  Config.h  ExecProxy.h  ZbxSender.h  utils.h
runtime/Debug/: ZDMarketDispatcher.exe.config
runtime/Debug/monitor/: zabbix.json
runtime/Release/: zabbix.json
src/: CFileReader.cpp  config.cpp  main.cpp  shell.cpp  zbx_sender.cpp
